# SteelJARVIS

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  MILESTONES.md  README.md  RISKS.md  ROADMAP.md  SPEC.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.cargo/: config.toml
docs/superpowers/plans/: 2026-04-19-jarvis-persona-memory.md
docs/superpowers/specs/: 2026-04-19-jarvis-persona-memory-design.md
src/: App.tsx
src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  tray.rs
src-tauri/src/agent/: engine.rs  greeting.rs  mod.rs
src-tauri/src/commands/: chat.rs  desktop.rs  memory.rs  mod.rs  permissions.rs  search.rs  settings.rs  voice.rs
src-tauri/src/config/: settings.rs
src-tauri/src/desktop/: mod.rs  provider.rs
src-tauri/src/memory/: embedder.rs  mod.rs  store.rs
src-tauri/src/observability/: event_bus.rs  mod.rs
src-tauri/src/permissions/: manager.rs  mod.rs
src-tauri/src/search/: mod.rs  provider.rs
src-tauri/src/session/: mod.rs  tracker.rs
src-tauri/src/voice/: activation.rs  audio_capture.rs  clap_detector.rs  mod.rs  speech.rs  stt.rs
src-tauri/swift/: SpeechRecognizer.swift
src/components/AppShell/: AppShell.module.css  AppShell.tsx
src/components/ChatPanel/: ChatPanel.module.css  ChatPanel.tsx
src/components/Dashboard/: Dashboard.tsx  (+1 more)
src/hooks/: useTauriEvent.ts
src/stores/: conversation.ts  dashboard.ts  voice.ts
src/styles/: global.css  variables.css
src/types/: events.ts  memory.ts  messages.ts  tools.ts
(+4 files in other folders)
