[package]
name = "steeljarvis"
version = "0.1.0"
description = "JARVIS autonomous desktop assistant"
authors = ["you"]
edition = "2021"

[lib]
name = "steeljarvis_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
dotenvy = "0.15"
futures = "0.3"
async-trait = "0.1"
cpal = "0.17"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10"
